Fix contact vertical spacing

--- a/_styles/styles.scss
+++ b/_styles/styles.scss
@@ -116,11 +116,11 @@ section[aria-label="personal summary"] {
 section[aria-label="career highlights"] {
   @include row;
   @include grid;
-  margin-bottom: 0;
+   margin-block: $spacing-vertical-section;
 
-  @media (min-width: $breakpoint-mobile) {
-    margin-block: $spacing-vertical-section;
-  }
+   @media (max-width: $breakpoint-mobile) {
+    margin-top: 0;
+   }
 
   .job-card {
     @include grid(12);
